v10/docs/ModelsRecoveryResponse.md
# ModelsRecoveryResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**PFX** | Pointer to **string** |  | [optional] 
**FileName** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsRecoveryResponse

`func NewModelsRecoveryResponse() *ModelsRecoveryResponse`

NewModelsRecoveryResponse instantiates a new ModelsRecoveryResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsRecoveryResponseWithDefaults

`func NewModelsRecoveryResponseWithDefaults() *ModelsRecoveryResponse`

NewModelsRecoveryResponseWithDefaults instantiates a new ModelsRecoveryResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetPFX

`func (o *ModelsRecoveryResponse) GetPFX() string`

GetPFX returns the PFX field if non-nil, zero value otherwise.

### GetPFXOk

`func (o *ModelsRecoveryResponse) GetPFXOk() (*string, bool)`

GetPFXOk returns a tuple with the PFX field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPFX

`func (o *ModelsRecoveryResponse) SetPFX(v string)`

SetPFX sets PFX field to given value.

### HasPFX

`func (o *ModelsRecoveryResponse) HasPFX() bool`

HasPFX returns a boolean if a field has been set.

### GetFileName

`func (o *ModelsRecoveryResponse) GetFileName() string`

GetFileName returns the FileName field if non-nil, zero value otherwise.

### GetFileNameOk

`func (o *ModelsRecoveryResponse) GetFileNameOk() (*string, bool)`

GetFileNameOk returns a tuple with the FileName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetFileName

`func (o *ModelsRecoveryResponse) SetFileName(v string)`

SetFileName sets FileName field to given value.

### HasFileName

`func (o *ModelsRecoveryResponse) HasFileName() bool`

HasFileName returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


