v11/docs/ModelsRecoveryResponse.md
# ModelsRecoveryResponse

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Pfx** | Pointer to **NullableString** |  | [optional] 
**FileName** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsRecoveryResponse

`func NewModelsRecoveryResponse() *ModelsRecoveryResponse`

NewModelsRecoveryResponse instantiates a new ModelsRecoveryResponse object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsRecoveryResponseWithDefaults

`func NewModelsRecoveryResponseWithDefaults() *ModelsRecoveryResponse`

NewModelsRecoveryResponseWithDefaults instantiates a new ModelsRecoveryResponse object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetPfx

`func (o *ModelsRecoveryResponse) GetPfx() string`

GetPfx returns the Pfx field if non-nil, zero value otherwise.

### GetPfxOk

`func (o *ModelsRecoveryResponse) GetPfxOk() (*string, bool)`

GetPfxOk returns a tuple with the Pfx field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPfx

`func (o *ModelsRecoveryResponse) SetPfx(v string)`

SetPfx sets Pfx field to given value.

### HasPfx

`func (o *ModelsRecoveryResponse) HasPfx() bool`

HasPfx returns a boolean if a field has been set.

### SetPfxNil

`func (o *ModelsRecoveryResponse) SetPfxNil(b bool)`

 SetPfxNil sets the value for Pfx to be an explicit nil

### UnsetPfx
`func (o *ModelsRecoveryResponse) UnsetPfx()`

UnsetPfx ensures that no value is present for Pfx, not even an explicit nil
### GetFileName

`func (o *ModelsRecoveryResponse) GetFileName() string`

GetFileName returns the FileName field if non-nil, zero value otherwise.

### GetFileNameOk

`func (o *ModelsRecoveryResponse) GetFileNameOk() (*string, bool)`

GetFileNameOk returns a tuple with the FileName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetFileName

`func (o *ModelsRecoveryResponse) SetFileName(v string)`

SetFileName sets FileName field to given value.

### HasFileName

`func (o *ModelsRecoveryResponse) HasFileName() bool`

HasFileName returns a boolean if a field has been set.

### SetFileNameNil

`func (o *ModelsRecoveryResponse) SetFileNameNil(b bool)`

 SetFileNameNil sets the value for FileName to be an explicit nil

### UnsetFileName
`func (o *ModelsRecoveryResponse) UnsetFileName()`

UnsetFileName ensures that no value is present for FileName, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


